desining events page

--- a/app/assets/stylesheets/components/_message_button.scss
+++ b/app/assets/stylesheets/components/_message_button.scss
@@ -1,6 +1,6 @@
 .msg-btn {
-  background-color: black;
-  color: white;
+  background-color: white;
+  color: #797878;
   border-radius: 5px;
   font-family: Caveat, sans-serif;
   width: -webkit-max-content;
@@ -8,5 +8,5 @@
   width: max-content;
   margin-right: 10px;
   font-family: Caveat, sans-serif;
-  font-size: 7px;
+  font-size: 13px;
 }
