--- a/app/assets/stylesheets/components/_cardproduct.scss
+++ b/app/assets/stylesheets/components/_cardproduct.scss
@@ -9,7 +9,7 @@
 .card-product {
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   overflow: hidden;
-  height: 110px;
+  // height: 110px;
   background: white;
   margin: 10px 10px;
   display: flex;
@@ -19,6 +19,7 @@
   img {
     height: 100%;
     object-fit: cover;
+    width: 115px;
   }
 }
 
@@ -43,7 +44,17 @@
     line-height: 1.4;
     margin-bottom: 5px;
   }
+}
 
-#tbd-avatar {
-  object-fit: contain;
+.message-card {
+  // background-color: #eee;
+  // color: #444;
+  // cursor: pointer;
+  // padding: 18px;
+  // width: 100%;
+  // border: none;
+  // text-align: left;
+  // outline: none;
+  // font-size: 15px;
+
 }
