--- a/app/assets/stylesheets/pages/_showpublicprofile.scss
+++ b/app/assets/stylesheets/pages/_showpublicprofile.scss
@@ -3,6 +3,13 @@
     background-color: white;
 }
 
+#back-arrow {
+  position: absolute;
+  width: 50px;
+  top: 15px;
+  left: 15px;
+}
+
 .profile-public {
   position: relative;
   img {
