--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,8 @@
 <div class="container-profile-public">
   <div class="profile-public">
+    <div class="people-btn back-btn">
+      <a href="<%= link_to :back %>"><%= image_tag 'back_btn.png', id: 'back-arrow' %></a>
+    </div>
     <% if @user.photos.attached? %>
       <%= cl_image_tag @user.photos.first.key, class: 'profile-public' %>
     <% elsif @user.picture_url? %>
@@ -46,9 +49,5 @@
       </div>
     </div>
   </div>
-
-  <div class="people-btn back-btn">
-      <%= link_to "BACK", :back %>
-    </div>
 
 </div>
