fixed the chatroom

--- a/app/assets/stylesheets/components/_chatroom.scss
+++ b/app/assets/stylesheets/components/_chatroom.scss
@@ -15,7 +15,7 @@
     overflow: scroll;
     padding: 1rem;
     background-color: white;
-    min-height: 600px;
+    height: 600px;
   }
 
   #new_message {
