--- a/app/assets/stylesheets/components/_message.scss
+++ b/app/assets/stylesheets/components/_message.scss
@@ -14,12 +14,12 @@
 .sender-style, .receiver-style {
   width: 60%;
   max-width: 250px;
-  border-radius: 4px;
-  padding: 8px;
+  border-radius: 6px;
+  padding: 11px;
   min-height: 80px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  // justify-content: center;
 }
 
 .sender-style {
@@ -28,4 +28,8 @@
 
 .receiver-style {
   background-color: lightblue;
+}
+small, .small {
+  font-size: 0.875em;
+  text-align: start;
 }
