--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container-profile-public">
   <div class="profile-public">
-    <div class="people-btn back-btn">
-      <a href="<%= link_to :back %>"><%= image_tag 'back_btn.png', id: 'back-arrow' %></a>
+    <div class="div-arrow">
+      <%= image_tag 'back_btn.png', id: 'back-arrow' %>
     </div>
     <% if @user.photos.attached? %>
       <%= cl_image_tag @user.photos.first.key, class: 'profile-public' %>
