--- a/app/assets/stylesheets/components/_message_card.scss
+++ b/app/assets/stylesheets/components/_message_card.scss
@@ -32,7 +32,7 @@
   flex: 1 1 auto;
   padding: var(--bs-card-spacer-y) var(--bs-card-spacer-x);
   color: var(--bs-card-color);
-  margin: 24px 0 11px -14px;
+  // margin: 24px 0 11px -14px;
 }
 
 #content-card {
