--- a/app/assets/stylesheets/pages/_showpublicprofile.scss
+++ b/app/assets/stylesheets/pages/_showpublicprofile.scss
@@ -1,13 +1,14 @@
 .container-profile-public {
-  padding: 20px;
-    background-color: white;
+  padding: 20px 20px 0 20px;
+  background-color: white;
 }
 
 #back-arrow {
   position: absolute;
   width: 50px;
-  top: 0px;
+  top: 15px;
   left: 15px;
+  z-index: 100;
 }
 
 .profile-public {
@@ -69,7 +70,7 @@
   margin-right: 0.6rem;
   margin-bottom: 0.4rem;
   p {
-    font-size: 13px;
+    font-size: 15px;
   }
 }
 
