--- a/app/assets/stylesheets/components/_message_button.scss
+++ b/app/assets/stylesheets/components/_message_button.scss
@@ -1,11 +1,11 @@
 .msg-btn {
   background-color: white;
   color: #797878;
-  border-radius: 5px;
+  border-radius: 6px;
   font-family: Caveat, sans-serif;
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
   margin-right: 10px;
-  font-size: 13px;
+  font-size: 1rem;
 }
