--- a/app/assets/stylesheets/components/_profile.scss
+++ b/app/assets/stylesheets/components/_profile.scss
@@ -106,6 +106,28 @@
   white-space: nowrap;
 }
 
+.all_conversation-profile{
+  margin: 0 auto;
+  width: 98%;
+  height: 53px;
+  color: white;
+  border-width: 4px;
+  border-style: solid;
+  border-image:
+    linear-gradient(
+      to right,
+      #e0c1f0ce,
+      rgba(0, 0, 0, 0)
+    ) 1 100%;
+  overflow-y: scroll;
+  display:flex;
+  align-items: center;
+  text-align: center;
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
+
 .tag {
   padding: 8px;
   color: white;
