updated the profile page

--- a/app/assets/stylesheets/components/_profile.scss
+++ b/app/assets/stylesheets/components/_profile.scss
@@ -95,7 +95,7 @@
 .grid {
   display: flex;
   grid-template-columns: repeat(2, 1fr);
-  grid-gap: 13px;
+  grid-gap: 10px;
   justify-items: center;
   // flex-wrap: wrap;
   justify-content: center;
@@ -150,4 +150,25 @@
 }
 .close:after {
   transform: rotate(-45deg);
+}
+.all_conversation-new{
+  margin: 0 auto;
+  width: 98%;
+  height: 53px;
+  color: white;
+  border-width: 5px;
+  border-style: solid;
+  border-image:
+    linear-gradient(
+      to right,
+      #e0c1f0f5,
+      rgba(0, 0, 0, 0)
+    ) 1 100%;
+  overflow-y: scroll;
+  display:flex;
+  align-items: center;
+  text-align: center;
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
