--- a/app/views/users/my_profile.html.erb
+++ b/app/views/users/my_profile.html.erb
@@ -20,7 +20,7 @@
 
   <div class="interest-card">
     <h2>My interests</h2>
-    <div class="scrollmenu">
+    <div class="scrollmenu all_conversation-new">
       <div class="grid">
         <% @my_profile.tags.each do |tag| %>
           <% unless tag.empty? %>
