--- a/app/assets/stylesheets/pages/_discussions_page.scss
+++ b/app/assets/stylesheets/pages/_discussions_page.scss
@@ -6,14 +6,15 @@
 
 .ticket-card-new {
   overflow: hidden;
-  min-height: 100px;
+  min-height: fit-content;
   background: white;
   display: flex;
   align-items: center;
   border: 1px black solid;
-  box-shadow: 3px 5px rgba(0, 0, 0, 0.7);
+  box-shadow: 3px 5px rgba(0,0,0,.7);
   border-radius: 5px;
-  margin: 20px;
+  margin: 15px 0 15px 0;
+  /* width: 100%; */
   justify-content: flex-start;
   padding: 10px;
   & a:link, & a:visited {
@@ -28,6 +29,8 @@
   }
   & p {
     margin: 0;
+    font-family: 'Manrope', sans-serif;
+    font-size: 12px;
   }
 }
 .description-card-all {
@@ -61,19 +64,15 @@
 }
 .all_conversation{
   margin: 0 auto;
-  width: 90%;
+  width: 100%;
   height: 100px;
   color: white;
   border-width: 3px;
   border-style: solid;
-  border-image:
-    linear-gradient(
-      to bottom,
-      #e0c1f0,
-      rgba(0, 0, 0, 0)
-    ) 1 100%;
+  -o-border-image: linear-gradient(to bottom, #e0c1f0, rgba(0, 0, 0, 0)) 1 100%;
+  border-image: linear-gradient(to bottom, #e6e6e6, rgba(0, 0, 0, 0)) 1 100%;
   overflow-y: scroll;
-  display:flex;
+  display: flex;
   align-items: center;
   text-align: center;
   &::-webkit-scrollbar {
