--- a/app/assets/stylesheets/pages/_showpublicprofile.scss
+++ b/app/assets/stylesheets/pages/_showpublicprofile.scss
@@ -5,7 +5,7 @@
 
 #back-arrow {
   position: absolute;
-  width: 50px;
+  width: 25px;
   top: 15px;
   left: 15px;
   z-index: 100;
@@ -26,7 +26,7 @@
     font-size: 30px;
     font-weight: bold;
     color: white;
-    background: #84C4BB;
+    // background: #84C4BB;
     padding: 1px 9px;
   }
 }
