--- a/app/assets/stylesheets/components/_profile.scss
+++ b/app/assets/stylesheets/components/_profile.scss
@@ -161,7 +161,7 @@
   border-image:
     linear-gradient(
       to right,
-      #e0c1f0f5,
+      #76caba,
       rgba(0, 0, 0, 0)
     ) 1 100%;
   overflow-y: scroll;
