We can see the top matches

--- a/app/assets/stylesheets/components/_topscore.scss
+++ b/app/assets/stylesheets/components/_topscore.scss
@@ -1,8 +1,16 @@
-#good-score {
+.no-match {
+  color: #383637;
+  font-family: 'Manrope', sans-serif;
+}
+.result_total {
+  color: #383637;
+  font-family: 'Manrope', sans-serif;
+}
+.good-score {
   color: #e74f89;
   font-family: 'Manrope', sans-serif;
 }
-#top-score {
+.top-score {
   color: #e72a72;
   font-family: 'Manrope', sans-serif;
 }
