--- a/app/views/events/_popupwhosgoing.html.erb
+++ b/app/views/events/_popupwhosgoing.html.erb
@@ -8,7 +8,7 @@
       </div>
 
       <div class="modal-body">
-        <% @event.users.each do |user| %>
+        <% @users.each do |user| %>
           <div class="wrapper">
             <div class="card-product" id="<%= user.id %>">
 
@@ -24,26 +24,8 @@
                 </div>
 
                 <div class="card-product-result">
-                  <% @result = 0 %>
-                  <% user.tags.each do |tag|%>
-                    <% if current_user.tags.include?(tag) %>
-                        <% @result += 35 %>
-                    <% end %>
-                  <% end %>
-                  <% score = @result %>
-                  <% result = case score %>
-                    <% when 30...100 then %>
-                      <p class="result_total">Score: <%= @result %></p>
-                      <p class="result_total">Could be a friend</p>
-                    <% when 100...200 then %>
-                      <p id="good-score">Score: <%= @result %></p>
-                      <p id="good-score">Worth a shot</p>
-                    <% when 200...350 then %>
-                      <p id="top-score"> Score: <%= @result %></p>
-                      <p id="top-score"><strong>SOULMATE ALERT</strong></p>
-                    <% else %>
-                      <p>Don't try, you have nothing in common</p>
-                  <% end %>
+                      <p class="<%= user.css %>">Score: <%= user.score %></p>
+                      <p class="<%= user.css %>"><%= user.match_level %></p>
                 </div>
 
                 <div class="card-product-button"
