--- a/app/assets/stylesheets/components/_profile.scss
+++ b/app/assets/stylesheets/components/_profile.scss
@@ -36,7 +36,8 @@
   }
 }
 .interest-card {
-  padding: 25px;
+  position: relative;
+  padding: 25px 12px;
   background-color: white;
   color: black;
   h2 {
@@ -48,6 +49,26 @@
     font-family: Manrope, sans-serif;
     margin: 0;
     font-weight: bold;
+  }
+  &::before, &::after {
+    content: '';
+    position: absolute;
+    z-index: 2;
+    width: 6px;
+    height: 22.9%;
+    margin-bottom: 10px;
+  }
+  &::before {
+    left: 0.96rem;
+    top: 59%;
+    background-image:
+    linear-gradient(90deg, rgba(0,0,0,0) 0%, #76caba 100%);
+  }
+  &::after {
+    right: 0.93rem;
+    top: 59%;
+    background-image:
+    linear-gradient(90deg, #76caba 0%, rgba(0,0,0,0)100%);
   }
 }
 .ticket-card {
@@ -152,18 +173,13 @@
   transform: rotate(-45deg);
 }
 .all_conversation-new{
+  position: relative;
   margin: 0 auto;
   width: 98%;
   height: 53px;
   color: white;
   border-width: 5px;
   border-style: solid;
-  border-image:
-    linear-gradient(
-      to right,
-      #76caba,
-      rgba(0, 0, 0, 0)
-    ) 1 100%;
   overflow-y: scroll;
   display:flex;
   align-items: center;
@@ -171,4 +187,5 @@
   &::-webkit-scrollbar {
     display: none;
   }
+
 }
