--- a/app/assets/stylesheets/components/_tickets.scss
+++ b/app/assets/stylesheets/components/_tickets.scss
@@ -5,9 +5,14 @@
   box-shadow: 3 3 30px rgba(0,0,0,0.5);
   display: flex;
   align-items: center;
-  border: 2px black solid;
+  border: 1px white solid;
   border-radius: 5px;
   margin: 10px;
+}
+
+.shows-scroll {
+  height: 29vh;
+  overflow-y: scroll;
 }
 
 .ticket img {
@@ -39,12 +44,11 @@
 .shows {
   padding: 20px;
   border-radius: 5px;
-  height: 42vh;
-  overflow-y: scroll;
   h2 {
     font-family: 'Caveat', cursive;
     font-size: 25px;
     padding-bottom: 20px;
+    color: white;
   }
   h3 {
     font-family: 'Manrope', sans-serif;
@@ -60,14 +64,13 @@
 }
 
 .shows-container {
-  padding-top: 25px;
   background-color: white;
 }
 
 #current-shows {
-  background-color: white;
-  border: 1px black solid;
-  box-shadow: 2px 2px rgba(0,0,0,.7);
+  background-color: #84C4BB;
+  border: 1px white solid;
+  box-shadow: 2px 2px #84c4bf;
 }
 
 #past-shows {
