--- a/app/assets/stylesheets/pages/_discussions_page.scss
+++ b/app/assets/stylesheets/pages/_discussions_page.scss
@@ -32,6 +32,9 @@
     font-family: 'Manrope', sans-serif;
     font-size: 12px;
   }
+  h3 {
+    font-family: 'Manrope', sans-serif;
+  }
 }
 .description-card-all {
   padding: 25px;
@@ -96,7 +99,6 @@
   width: 60px;
   height: 60px;
   margin-bottom:2px;
-  border-color: #e0c1f0;
   &:hover {
     transform: scale(1.01);
   }
