working on the button bug buy ticket

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -52,8 +52,7 @@
       Buy a ticket
     </button>
 
-    <button data-action="click->buy-tickets#buyTickets"
-            type="button"
+    <button type="button"
             class="buy-btn green"
             data-buy-tickets-target="showButton">
             <%= link_to "See your ticket", my_tickets_path %>
