hide my own tickets and some css styling

--- a/app/views/events/_popupwhosgoing.html.erb
+++ b/app/views/events/_popupwhosgoing.html.erb
@@ -9,6 +9,7 @@
 
       <div class="modal-body">
         <% @users.each do |user| %>
+          <% unless user == current_user %>
           <div class="wrapper">
             <div class="card-product" id="<%= user.id %>">
 
@@ -73,6 +74,7 @@
               </div>
             </div>
           </div>
+          <% end %>
         <% end %>
       </div>
     </div>
