--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -21,10 +21,7 @@
     <p><%= @event.address %><br></p>
 
     <h2>Description</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-      veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-      commodo consequat.</p>
+    <p><%= @event.description %><br></p>
 
   </div>
 
