--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,13 @@
 <div class="header-home" data-controller="refresh-markers">
 
   <div class="title-home">
-    <h1>Choose an event near you and find a buddy </h1>
+    <h1><span style="color: #EA4C88">Choose</span> an event</h1>
+    <h1> Find a <span style="color: #EA4C88">buddy</span> </h1>
   </div>
 
   <div class="p-home">
-    <p>No more saturday night <strong>alone</strong>. With last minute date, <strong>choose</strong> a show and <strong>find a buddy</strong> to go with you. </p>
+    <p>No more saturday night <strong>alone</strong></p>
+    <p>Find a show you <strong>like</strong> with a <strong>buddy</strong> you like</p>
   </div>
 
   <div class="btn-div-home">
