--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -33,7 +33,7 @@
       <div class="show-container">
         <h2>My favourite shows</h2>
         <% if @my_events != nil %>
-          <% @my_events.first(2).each do |event| %>
+          <% @my_events.last(2).each do |event| %>
           <div class="ticket-card favorite-show">
             <%= image_tag event.picture_url %>
             <div class="ticket-card-infos">
