clears url params but date is an array

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,7 +8,7 @@
     <p>No more saturday night <strong>alone</strong>. With last minute date, <strong>choose</strong> a show and <strong>find a buddy</strong> to go with you. </p>
   </div>
 
-  <div class="btn-div-home">
+  <div class="btn-div-home" data-refresh-markers-target="button" data-action="click->refresh-markers#clearUrl">
     <button type="button" class="form-control-search" data-bs-toggle="modal" data-bs-target="#modal" data-bs-whatever="@getbootstrap">Where and when do you want to go?</button>
   </div>
 
