--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -27,7 +27,7 @@
   flex-grow: 0;
   // margin-bottom: 100%;
   z-index: 2;
-  min-height: 1013px;
+  min-height: 1038px
 }
 
 .navbar-lmd .navbar-brand img {
