designing last css things

--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -26,6 +26,7 @@
   border: none;
   border-radius: 10px;
   width: 125px;
+  font-family: 'Manrope', sans-serif;
 }
 .modal-content {
   height: 720px;
