--- a/app/assets/stylesheets/components/_profile.scss
+++ b/app/assets/stylesheets/components/_profile.scss
@@ -40,6 +40,7 @@
   padding: 25px 12px;
   background-color: white;
   color: black;
+  z-index: 0;
   h2 {
     font-family: Caveat, cursive;
     font-size: 30px;
