--- a/app/assets/stylesheets/components/_searchbar.scss
+++ b/app/assets/stylesheets/components/_searchbar.scss
@@ -27,9 +27,10 @@
   font-size: 13px;
   border-radius: 10px;
   padding: 15px;
-  width: 275px;
+  width: 297px;
   color: grey;
   border: none;
   background-color: #EEEEEE;
-  margin: 10px 57px 44px;
+  margin: 10px 57px 29px;
+  height: 63px;
 }
