--- a/app/assets/stylesheets/components/_update_form.scss
+++ b/app/assets/stylesheets/components/_update_form.scss
@@ -16,7 +16,7 @@
     font-family: 'Manrope', sans-serif;
     margin-bottom: 31px;
     margin-top: 10px;
-    font-size: 22px;
+    font-size: 20px;
   }
   h3 {
     text-align: center;
@@ -69,7 +69,9 @@
 
 .update-btn {
   display: flex;
-  justify-content: flex-end
+  justify-content: flex-end;
+  font-family: Manrope, sans-serif;
+  font-size: 15px;
 }
 
 .back {
