--- a/app/assets/stylesheets/components/_eventbanner.scss
+++ b/app/assets/stylesheets/components/_eventbanner.scss
@@ -1,7 +1,7 @@
 .event-banner {
   background-color: black;
   display: flex;
-  text-align: left;
+  text-align: center;
 }
 
 .event-banner-text p {
@@ -38,7 +38,7 @@
   width: 108px;
   transition: all 0.5s;
   cursor: pointer;
-  margin: 0 0 0 -11px;
+  margin: 0;
 }
 
 // .event-banner-image {
