--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -7,7 +7,7 @@
 
   <div class="events-header">
     <h1><%= @event.title %></h1>
-    <h2>By <%= @event.venue %></h2>
+    <h2>By <%= @event.artist %></h2>
   </div>
 
   <div class="events-body">
