--- a/app/assets/stylesheets/components/_alert.scss
+++ b/app/assets/stylesheets/components/_alert.scss
@@ -1,6 +1,22 @@
 .alert {
   position: fixed;
   bottom: 16px;
-  right: 16px;
   z-index: 1000;
+  background: #EA4C88;
+  font-family: 'Manrope';
+  color: white;
+  border: 1px white solid;
+  width: 100%;
+}
+
+.alert-dismissible .btn-close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 2;
+  /* padding: 1.25rem 1rem; */
+}
+
+#btn-close-alert {
+margin: auto !important;
 }
