--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -72,7 +72,7 @@
   text-align: center;
   font-family: 'Manrope', sans-serif;
   font-size: 15px;
-  width: fit-content;
+  width: auto;
   height: fit-content;
   display: flex;
   flex-direction: column;
