margin doesn't move after sending a message

--- a/app/views/events/_popupwhosgoing.html.erb
+++ b/app/views/events/_popupwhosgoing.html.erb
@@ -31,7 +31,7 @@
                 </div>
 
                 <div class="card-product-result">
-                      <p class="<%= user.css %>">Score: <%= user.score %></p>
+                      <p class="<%= user.css %>">Matching score: <%= user.score %></p>
                       <p class="<%= user.css %>"><%= user.match_level %></p>
                 </div>
 
