--- a/app/assets/stylesheets/components/_cardproduct.scss
+++ b/app/assets/stylesheets/components/_cardproduct.scss
@@ -24,7 +24,7 @@
 }
 
 .card-product-image {
-  width: 100%;
+  width: 115px;
 }
 
 .card-product-name {
@@ -40,7 +40,7 @@
 .card-product-result {
   p {
     font-family: 'Manrope';
-    font-size: 9px;
+    font-size: 11px;
     line-height: 1.4;
     margin-bottom: 5px;
   }
