added link to event

--- a/app/assets/stylesheets/components/_tickets.scss
+++ b/app/assets/stylesheets/components/_tickets.scss
@@ -10,6 +10,11 @@
   margin: 10px;
 }
 
+.ticket-img {
+  margin-left: 0;
+  height: 100%;
+}
+
 .shows-scroll {
   height: 29vh;
   overflow-y: scroll;
