little css amnd seed changes

--- a/app/assets/stylesheets/components/_cardproduct.scss
+++ b/app/assets/stylesheets/components/_cardproduct.scss
@@ -40,7 +40,8 @@
 .card-product-result {
   p {
     font-family: 'Manrope';
-    font-size: 11px;
+    font-size: 13px;
+    font-weight: 900;
     line-height: 1.4;
     margin-bottom: 5px;
   }
