--- a/app/assets/stylesheets/components/_message_button.scss
+++ b/app/assets/stylesheets/components/_message_button.scss
@@ -2,10 +2,11 @@
   background-color: white;
   color: #797878;
   border-radius: 6px;
-  font-family: Caveat, sans-serif;
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
   margin-right: 10px;
   font-size: 1rem;
+  font-family: 'Manrope';
+  font-size: 12px;
 }
