--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,12 +2,12 @@
 
   <div class="title-home">
     <h1><span style="color: #EA4C88">Choose</span> an event</h1>
-    <h2> Find a <span style="color: #EA4C88">buddy</span> </h2>
+    <h2> Find your <span style="color: #EA4C88">soulmate</span> </h2>
   </div>
 
   <div class="p-home">
-    <p>No more saturday night <strong>alone</strong></p>
-    <p>Find a show you <strong>like</strong> with a <strong>buddy</strong> you like</p>
+    <p>No more nights<strong> alone!</strong></p>
+    <p>Find a show you <strong>like</strong> with your soulmate.</p>
   </div>
 
   <div class="btn-div-home">
