--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,7 +19,7 @@
       <div class="modal-content">
 
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          <h1 class="modal-title fs-5" id="exampleModalLabel">Where and when would you like to see a show?</h1>
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Where and when would you like to see an event?</h1>
 
         <%= form_with url: root_path, method: :get, class: "modal-form" do %>
           <%= submit_tag "Search", class: 'search-btn'%>
